modified database connection and queries

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -52,7 +52,7 @@
                                 <option value="articulaciones">Articulaciones</option>
                                 <option value="dientes">Dientes</option>
                                 <option value="extremidades">Extremidades</option>
-                                <option value="Torax">Torax</option>
+                                <option value="torax">Torax</option>
                             </select>
                         </div>
                         <div>
