--- a/views/update.ejs
+++ b/views/update.ejs
@@ -52,14 +52,11 @@
                                     De Radiografía</label>
                                 <select id="tipo" name="tipo"
                                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
-                                    <option <%=user.tipo=="abdominal" ? "selected" :"" %> value="abdominal">Abdominal
-                                    </option>
-                                    <option <%=user.tipo=="articulaciones" ? "selected" :"" %>
-                                        value="articulaciones">Articulaciones</option>
-                                    <option <%=user.tipo=="dientes" ? "selected" :"" %> value="dientes">Dientes</option>
-                                    <option <%=user.tipo=="extremidades" ? "selected" :"" %>
-                                        value="extremidades">Extremidades</option>
-                                    <option <%=user.tipo=="torax" ? "selected" :"" %> value="torax">Torax</option>
+                                    <option <%= user.tipo == "abdominal" ? "selected" : "" %> value="abdominal" >Abdominal</option>
+                                    <option <%= user.tipo == "articulaciones" ? "selected" : "" %> value="articulaciones" >Articulaciones</option>
+                                    <option <%= user.tipo == "dientes" ? "selected" : "" %> value="dientes" >Dientes</option>
+                                    <option <%= user.tipo == "extremidades" ? "selected" : "" %> value="extremidades" >Extremidades</option>
+                                    <option <%= user.tipo == "torax" ? "selected" : "" %> value="torax" >Torax</option>
                                 </select>
                             </div>
                             <div>
